--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
 sudo: false
 language: cpp
 
-compiler:
-  - gcc
-  - clang
+matrix:
+  include:
+    - env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+      addons:
+        apt:
+          packages:
+            - g++-5
+          sources:
+            - ubuntu-toolchain-r-test
+    - env: COMPILER_NAME=clang CXX=clang++-3.7 CC=clang-3.7
+      addons:
+        apt:
+          packages:
+            - clang-3.7
+          sources:
+            - llvm-toolchain-precise-3.7
 
 install:
-  - export COMPILER_NAME="$CC"
-  - export PATH="$HOME/bin:$PATH"
-  - if [ "$CXX" = "g++" ]; then export CXX=g++-5 CC=gcc-5; fi
-  - if [ "$CXX" = "clang++" ]; then export CXX=clang++-3.7 CC=clang-3.7; fi
-  -
   - mkdir ~/bin
   - wget --no-check-certificate --no-clobber -O /tmp/tools/waf https://waf.io/waf-1.8.14 || true
   - install -t ~/bin /tmp/tools/waf
@@ -24,11 +32,5 @@ cache:
   directories:
     - /tmp/tools
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.7
-    packages:
-      - g++-5
-      - clang-3.7
+env:
+  - PATH="$HOME/bin:$PATH"
