--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ language: cpp
 
 matrix:
   include:
-    - env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+    - env: COMPILER_NAME=gcc _CXX=g++-5 _CC=gcc-5
       addons:
         apt:
           packages:
             - g++-5
           sources:
             - ubuntu-toolchain-r-test
-    - env: COMPILER_NAME=clang CXX=clang++-3.7 CC=clang-3.7
+    - env: COMPILER_NAME=clang _CXX=clang++-3.7 _CC=clang-3.7
       addons:
         apt:
           packages:
@@ -19,6 +19,9 @@ matrix:
             - llvm-toolchain-precise-3.7
 
 install:
+  - export PATH="$HOME/bin:$PATH"
+  - export CXX="$_CXX" CC="$_CC"
+  -
   - mkdir ~/bin
   - wget --no-check-certificate --no-clobber -O /tmp/tools/waf https://waf.io/waf-1.8.14 || true
   - install -t ~/bin /tmp/tools/waf
@@ -31,6 +34,3 @@ cache:
   apt: true
   directories:
     - /tmp/tools
-
-env:
-  - PATH="$HOME/bin:$PATH"
