--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 
 matrix:
   include:
-    - env: COMPILER_NAME=gcc _CXX=g++-5 _CC=gcc-5
+    - env: _CXX=g++-5 _CC=gcc-5
       addons:
         apt:
           packages:
@@ -11,12 +11,15 @@ matrix:
           sources: &sources
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.7
-    - env: COMPILER_NAME=clang _CXX=clang++-3.7 _CC=clang-3.7
+    - env: _CXX=clang++-3.7 _CC=clang-3.7
       addons:
         apt:
           packages:
             - clang-3.7
           sources: *sources
+    - env: _CXX=clang++ _CC=clang
+      os: osx
+      osx_image: xcode7
 
 install:
   - export PATH="$HOME/bin:$PATH"
@@ -29,7 +32,6 @@ install:
 script:
   - waf configure
   - waf --build-test
-  -
   - build/tester
 
 cache:
