--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ sudo: false
 language: cpp
 
 matrix:
-  allow_failures:
-    - os: osx
   include:
     - env: _CXX=g++-5 _CC=gcc-5
       addons:
@@ -11,6 +9,7 @@ matrix:
           packages:
             - g++-5
           sources: &sources
+            - llvm-toolchain-precise
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.7
     - env: _CXX=clang++-3.7 _CC=clang-3.7
@@ -19,9 +18,12 @@ matrix:
           packages:
             - clang-3.7
           sources: *sources
-    - env: _CXX=clang++ _CC=clang CXXFLAGS="-stdlib=libstdc++"
-      os: osx
-      osx_image: xcode7
+    - env: _CXX=clang++-3.8 _CC=clang-3.8
+      addons:
+        apt:
+          packages:
+            - clang-3.8
+          sources: *sources
 
 install:
   - export PATH="$HOME/bin:$PATH"
