Actually clang-3.8 fails :( Allow it to and build with clang-3.7
Ref: https://travis-ci.org/nabijaczleweli/Cpponfiguration/jobs/84400998#L255

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: cpp
 
 matrix:
+  allow_failures:
+    - env: _CXX=clang++-3.8 _CC=clang-3.8
   include:
     - env: _CXX=g++-5 _CC=gcc-5
       addons:
@@ -9,8 +11,15 @@ matrix:
           packages:
             - g++-5
           sources: &sources
-            - llvm-toolchain-precise
             - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise
+            - llvm-toolchain-precise-3.7
+    - env: _CXX=clang++-3.7 _CC=clang-3.7
+      addons:
+        apt:
+          packages:
+            - clang-3.7
+          sources: *sources
     - env: _CXX=clang++-3.8 _CC=clang-3.8
       addons:
         apt:
