--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 language: cpp
+git:
+  submodules: false
 
 matrix:
   include:
@@ -26,9 +28,12 @@ install:
   - wget --no-check-certificate --no-clobber -O /tmp/tools/waf https://waf.io/waf-1.8.14 || true
   - install -t ~/bin /tmp/tools/waf
 
+before_script:
+  - git submodule update --init --recursive
+
 script:
   - waf configure
-  - waf --build-test
+  - waf
   - build/tester
 
 cache:
