--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
-language: cpp
+language: generic
 git:
   submodules: false
 
 matrix:
   include:
-    - env: _CXX=g++-5 _CC=gcc-5
+    - env: CXX=g++-5 CC=gcc-5
       addons:
         apt:
           packages:
@@ -13,7 +13,7 @@ matrix:
           sources: &sources
             - llvm-toolchain-precise
             - ubuntu-toolchain-r-test
-    - env: _CXX=clang++-3.8 _CC=clang-3.8
+    - env: CXX=clang++-3.8 CC=clang-3.8
       addons:
         apt:
           packages:
@@ -22,7 +22,6 @@ matrix:
 
 install:
   - export PATH="$HOME/bin:$PATH"
-  - export CXX="$_CXX" CC="$_CC"
   -
   - mkdir ~/bin
   - wget --no-check-certificate --no-clobber -O /tmp/tools/waf https://waf.io/waf-1.8.14 || true
